--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -31,3 +31,7 @@ body {
 .bg-primary {
     background-color: $primary-color;
 }
+
+.font-time-new-roman {
+    font-family: 'Times New Roman', Times, serif;
+}
