--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,3 +27,26 @@ body {
 .font-time-new-roman {
     font-family: 'Times New Roman', Times, serif;
 }
+.font-sans-serif {
+    font-family: sans-serif;
+}
+.font-custom-serif {
+    font-family: serif;
+}
+
+.sub-scrollbar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #f5f5f5;
+}
+
+.sub-scrollbar::-webkit-scrollbar {
+    width: 12px;
+    background-color: #f5f5f5;
+}
+
+.sub-scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #c1c1c1;
+}
