--- a/src/styles/authPage.module.scss
+++ b/src/styles/authPage.module.scss
@@ -1,4 +1,5 @@
-$primary-color: #8299ce;
+@import './variable';
+
 .form-gradient {
     background-image: linear-gradient(to right, $primary-color, white);
 }
