--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-$primary-color: #8299ce;
+@import './variable';
 
 :root {
     --foreground-rgb: 0, 0, 0;
@@ -22,6 +22,10 @@ body {
 
 .bg-primary {
     background-color: $primary-color;
+}
+
+.text-primary {
+    color: $primary-color;
 }
 
 .font-time-new-roman {
