--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -54,3 +54,6 @@ body {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #c1c1c1;
 }
+.ant-input-group-addon {
+    display: none !important;
+}
