--- a/src/styles/beforeafter.scss
+++ b/src/styles/beforeafter.scss
@@ -1,10 +1,10 @@
-input {
+.beforeafter input {
     width: 100%;
     outline: none;
     background: none;
     -webkit-appearance: none;
 }
-input::-webkit-slider-thumb{
+.beforeafter input::-webkit-slider-thumb{
     height: 500px;
     width: 3px;
     background-color: none;
